--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
               <thead >
                 <tr>
                   <th scope="col">Flag</th>
-                  <th scope="col">Country</th>
-                  <th scope="col">Cases</th>
-                  <th scope="col">Recovered</th>
-                  <th scope="col">Deaths</th>
+                  <th scope="col" onclick="sortNewTable('country',1);">Country <i class="fa fa-sort"></i></th>
+                  <th scope="col" onclick="sortNewTable('cases',2);">Cases <i class="fa fa-sort"></i></th>
+                  <th scope="col" onclick="sortNewTable('recovered',3);">Recovered <i class="fa fa-sort"></i></th>
+                  <th scope="col" onclick="sortNewTable('deaths',4);">Deaths <i class="fa fa-sort"></i></th>
                 </tr>
               </thead>
             
