--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="card active" onclick=" toggleActive(this),changeDataSelection('cases'),getHistoricalData('cases')">
               <div class="card-body">
                 <h5 class="card-title">Total Cases</h5>
-                <h6 class="card-subtitle mb-2 total-number">1,436,886</h6>
+                <h6 class="card-subtitle mb-2 total-number"></h6>
               </div>
             </div>
           </div>
@@ -46,7 +46,7 @@
             <div class="card active-cases-card" onclick="toggleActive(this),changeDataSelection('active'),getHistoricalData('active')">
               <div class="card-body">
                 <h5 class="card-title">Active Cases</h5>
-                <h6 class="card-subtitle mb-2 active-number">1,049,886</h6>
+                <h6 class="card-subtitle mb-2 active-number"></h6>
               </div>
             </div>
           </div>
@@ -54,7 +54,7 @@
             <div class="card" onclick=" toggleActive(this),changeDataSelection('recovered'),getHistoricalData('recovered')">
               <div class="card-body">
                 <h5 class="card-title">Recovered</h5>
-                <h6 class="card-subtitle mb-2 recovered-number">302,964</h6>
+                <h6 class="card-subtitle mb-2 recovered-number"></h6>
               </div>
             </div>
           </div>
@@ -62,7 +62,7 @@
             <div class="card" onclick=" toggleActive(this),changeDataSelection('deaths'),getHistoricalData('deaths')">
               <div class="card-body">
                 <h5 class="card-title">Deaths</h5>
-                <h6 class="card-subtitle mb-2 deaths-number">82,191</h6>
+                <h6 class="card-subtitle mb-2 deaths-number"></h6>
               </div>
             </div>
           </div>
